// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  aria-live="polite"
  class="NotificationItem NotificationItem--success"
  data-intent="success"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    success
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--success"
  >
    <svg
      class="Icon Icon--small Icon--positive"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification text
      </h2>
      <p
        class="NotificationItem__body NotificationItem__body--naked"
      />
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="TabFocusTrap IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="Icon Icon--small Icon--primary IconButton__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
        >
          <path
            d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with "error" intent 1`] = `
<div
  aria-live="assertive"
  class="NotificationItem NotificationItem--error"
  data-intent="error"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    error
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--error"
  >
    <svg
      class="Icon Icon--small Icon--negative"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification text
      </h2>
      <p
        class="NotificationItem__body NotificationItem__body--naked"
      />
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="TabFocusTrap IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="Icon Icon--small Icon--primary IconButton__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
        >
          <path
            d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with "warning" intent 1`] = `
<div
  aria-live="assertive"
  class="NotificationItem NotificationItem--warning"
  data-intent="warning"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    warning
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--warning"
  >
    <svg
      class="Icon Icon--small Icon--warning"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification text
      </h2>
      <p
        class="NotificationItem__body NotificationItem__body--naked"
      />
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="TabFocusTrap IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="Icon Icon--small Icon--primary IconButton__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
        >
          <path
            d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with a cta 1`] = `
<div
  aria-live="assertive"
  class="NotificationItem NotificationItem--warning"
  data-intent="warning"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    warning
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--warning"
  >
    <svg
      class="Icon Icon--small Icon--warning"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        This is the body text.
      </h2>
      <p
        class="NotificationItem__body"
      />
      <div>
        <button
          class="TextLink TextLink--primary"
          data-test-id="cf-ui-text-link"
          type="button"
        >
          <span
            class="TabFocusTrap"
            tabindex="-1"
          >
            This is some label text
          </span>
        </button>
      </div>
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="TabFocusTrap IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="Icon Icon--small Icon--primary IconButton__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
        >
          <path
            d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders the component with a title and a body 1`] = `
<div
  aria-live="polite"
  class="NotificationItem NotificationItem--success"
  data-intent="success"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    class="NotificationItem__intent"
  >
    success
  </div>
  <div
    aria-hidden="true"
    class="NotificationItem__icon NotificationItem__icon--success"
  >
    <svg
      class="Icon Icon--small Icon--positive"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
  <div
    class="NotificationItem__content"
  >
    <div
      class="NotificationItem__text"
    >
      <h2
        class="NotificationItem__title"
      >
        Notification title
      </h2>
      <p
        class="NotificationItem__body"
      >
        This is the body text.
      </p>
    </div>
    <button
      class="IconButton NotificationItem__dismiss IconButton--secondary"
      data-test-id="cf-ui-notification-close"
      type="button"
    >
      <span
        class="TabFocusTrap IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="Icon Icon--small Icon--primary IconButton__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 18 18"
          width="1em"
        >
          <path
            d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;
